2008-06-09  Inge Wallin  <inge@lysator.liu.se>

	* docs/Programmers-manual.txt: Added chapter about MarbleMap and
	GeoPainter

2008-06-08  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KMLCoordinatesTagHandler.cpp

    fix coordinates to use the correct unit

2008-06-08  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataFeature.h
    * src/lib/geodata/data/GeoDataPlacemark.h
    
    add function to check more easy if Feature is a placemark
    This has to be cleaned in future because a check with a
    cast is more convenient
    
2008-06-08  Inge Wallin  <inge@lysator.liu.se>

	* docs/Programmers-manual.txt: New file.  Chapter about
	MarbleWidget done, the rest remaining

2008-06-08  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataContainer.{h|cpp}

    add placemarks() function to return only the placemarks

2008-06-08  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PlaceMarkContainer.{h|cpp}

    make PlaceMarkContainer copiable and
    add new ctor for QVector<GeoDataPlacemark*>

2008-06-08  Patrick Spendrin    <ps_ml@gmx.de>

    * data/placemarks/baseplacemarks.kml
    * data/placemarks/elevplacemarks.kml
    * data/placemarks/boundaryplacemarks.kml
    * data/placemarks/otherplacemarks.kml

    make the description be of type CDATA
    thus you can use html tags in there and the parser
    will read this part together
    
2008-06-08  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KMLAreaTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLColorModeTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLColorTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLCoordinatesTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLCountryNameCodeTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLCountrycodeTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLDescriptionTagHandler.cpp
    * src/lib/geodata/handlers/kml/KMLFillTagHandler.cpp